# Cliex

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  tmp_typer.py
.github/workflows/: release.yml
cliex/: __init__.py  __main__.py  main.py
cliex/checker/: __init__.py  checker.py
cliex/cli/: new.py
cliex/runner/: __init__.py  runner.py
cliex/setup/: __init__.py  executor.py  loader.py  registry.py  types.py  variables.py
cliex/templates/setups/: cliex-metadata.yaml  fastapi.yaml  nextjs-setup.yaml  razor.yaml  tauri-setup.yaml
docs/: RELEASE.md
tests/: conftest.py  test_executor.py  test_loader.py  test_registry.py  test_variables.py
