[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cliex"
version = "0.1.0"
description = "CLI tool setup project quickly."
authors = [{name = "DucHuynhTrung", email = "huynhtrungduc.growth@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
cliex = "cliex.main:app"

[project.urls]
Homepage = "https://github.com/DucHuynhTrung/cliex-quick"
Repository = "https://github.com/DucHuynhTrung/cliex-quick.git"
