[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cliex"
version = "0.1.0"
description = "CLI tool setup project quickly."
authors = [{name = "DucHuynhTrung", email = "huynhtrungduc.growth@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
cliex = "cliex.main:app"

[project.urls]
Homepage = "https://github.com/DucHuynhTrung/cliex-quick"
Repository = "https://github.com/DucHuynhTrung/cliex-quick.git"
Documentation = "https://github.com/DucHuynhTrung/cliex-quick#readme"
"Bug Tracker" = "https://github.com/DucHuynhTrung/cliex-quick/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flit.module]
name = "cliex"

[tool.flit.sdist]
include = [
    "cliex/templates/",
]
